--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-backend/node_modules
-backend/build
-backend/package-lock.json
+**/node_modules
+**/build
+**/package-lock.json
+
+**/.DS_Store
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
