--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Debankle",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "nodemon": "^2.0.7",
@@ -20,6 +21,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chalk": "^3.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
