--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
     "nodemon": "^2.0.7",
     "tsc-watch": "^4.2.9",
@@ -24,6 +25,7 @@
     "bcrypt": "^5.0.1",
     "chalk": "^3.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "rimraf": "^3.0.2"
   }
